# SBCLion

./: .gitignore  CMakeLists.txt  Fill.cpp  Film.h  Task1.cpp  Task2.cpp  Task3.cpp  Tasks.h  film.json  main.cpp
